# jungle-fi-cli-utils

./: .gitignore  Cargo.toml  LICENSE  README.md
clap-v3-utils/: Cargo.toml
cli-utils/: Cargo.toml
cli-utils/src/: clap.rs  lib.rs  serde_pubkey_str.rs
cli-utils/src/cli/: config.rs  mod.rs  parse_keypair_from_path.rs
cli-utils/test/: test-keypair.json  test-keypair2.json
client-tx-processor/: Cargo.toml
client-tx-processor/src/: error.rs  interface_types.rs  lib.rs
examples/localnet_test_suites/: Anchor.toml  build_localnet.sh  localnet.sh
examples/localnet_test_suites/localnet/: Cargo.toml
examples/localnet_test_suites/localnet/src/: main.rs  suite_one.rs  suite_two.rs
examples/localnet_test_suites/tests/suite-1/: mint.json  test_user.json  test_user_token_act.json
examples/localnet_test_suites/tests/suite-2/: mint.json  test_user.json  test_user_token_act.json  usdc_mint.json
extra-signers/: Cargo.toml  README.md
extra-signers/src/: concrete_signer.rs
genesys_go_rpc_auth/: Cargo.toml
genesys_go_rpc_auth/src/: lib.rs
jungle-fi-cli-utils/: Cargo.toml
jungle-fi-cli-utils/src/: lib.rs  proposal.rs  solana_test_validator.rs  transaction_processing.rs  tx_processing.rs
jungle-fi-cli-utils/src/account/: generate.rs  mod.rs  parsing.rs  threadsafe_keypair.rs  wrapped_spl_types.rs
jungle-fi-cli-utils/src/input_parsing/: config.rs  keypair_from_path.rs  mod.rs
localnet-tools/: Cargo.toml  README.md
localnet-tools/src/: anchor_test_log_workaround.rs  cli.rs  clone_account.rs  generate_account.rs  idl.rs  lib.rs  localnet_account.rs  test_toml.rs  test_toml_generator.rs  test_validator.rs  trait_based.rs  wrapped_spl_types.rs
rpc-client-headers/: Cargo.toml
rpc-client-headers/src/: lib.rs
test/: Anchor.toml
test/localnet/: Cargo.toml
test/localnet/src/: main.rs
test/programs/test-program/: Cargo.toml
test/tests/suite-1/: Test.toml  test.ts
tests/localnet-tests/programs/test-program/src/: lib.rs
tests/localnet-tests/tests/: Cargo.toml
tests/localnet-tests/tests/localnet/: Cargo.toml
tests/localnet-tests/tests/localnet/src/: main.rs  suite_one.rs  suite_two.rs
tests/localnet-tests/tests/suite-1/: Test.toml  accounts.ts  mint.json  test_user.json  test_user_token_act.json
tests/localnet-tests/tests/suite-2/: Test.toml  mint.json  test_user.json  test_user_token_act.json  usdc_mint.json
threadsafe-signer/: Cargo.toml  README.md
threadsafe-signer/src/: lib.rs
