[package]
name = "jungle-fi-cli-utils"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.26.0"
serde = "1.0.140"
thiserror = "1.0.31"
anyhow = "1.0.58"
log = "0.4.17"
solana-clap-v3-utils = "1.14.11"
solana-sdk = "1.14.11"
solana-program = "1.14.11"
solana-cli-config = "1.14.11"
uriparse = "0.6.4"
clap = { version = "3.2.14", features = [ "derive" ] }
