[package]
name = "jungle-fi-cli-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.25.0"
anchor-spl = "0.25.0"
anchor-cli = "0.25.0"
anchor-syn = "0.25.0"
serde_json = "1.0.81"
serde = "1.0.140"
thiserror = "1.0.31"
anyhow = "1.0.58"
spl-token = "3.2.0"
serum-multisig = { version = "0.9.0", path = "../multisig" }
solana-clap-v3-utils = { path = "../clap-v3-utils" }
solana-sdk = "1.10.29"
solana-program = "1.10.29"
solana-test-validator = "1.10.29"
solana-account-decoder = "1.10.29"
solana-cli-config = "1.10.29"
symlink = "0.1.0"
uriparse = "0.6.4"
log = "0.4.17"
clap = { version = "3.2.14", features = [ "derive" ] }
bincode = "1.3.3"
