[package]
name = "jungle-fi-localnet-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.25.0"
anchor-cli = "0.25.0"
anchor-spl = "0.25.0"
anchor-syn = "0.25.0"
spl-token = "3.2.0"
solana-sdk = "1.10.29"
solana-program = "1.10.29"
solana-account-decoder = "1.10.29"
Inflector = "0.11.4"
anyhow = "1.0.66"
serde_json = "1.0.81"
serde = "1.0.140"
