[package]
name = "solana-rpc-client-headers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anchor-client = "0.25.0"
serde_json = "1.0.81"
serde = "1.0.140"
reqwest = "0.11.12"
async-trait = "0.1.58"
log = "0.4.17"
tokio = "1.14.1"
solana-sdk = "1.10.29"
solana-client = "1.10.29"
solana-version = "1.10.29"

[dev-dependencies]
jsonrpc-core = "18.0.0"
solana-client = "1.10.29"
jsonrpc-http-server = "18.0.0"
crossbeam-channel = "0.5"
futures = "0.3"
futures-util = "0.3.21"
